--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -32,22 +32,28 @@ Promise.resolve({})
 .then(ns => {
 	let { fun: { lens, read, }, render: { rd, renderAgain, }, } = ns;
 
-	let component = (path, initvm, xhtml, envf, intf) => {
-		let lens_ = lens.key(path);
-		let change = f => renderAgain(view, vm => ({ ...vm, [path]: f(vm[path]), }));
+	let view;
+
+	let component = (path, publicf, xhtml, privatef) => {
+		let change = f => renderAgain(view, vm => {
+			let vm_ = vm != null ? vm[path] : null;
+			return ({ ...vm, [path]: f(vm_), });
+		});
 		return {
 			init: () => renderAgain(view, vm => ({ ...vm, [path]: initvm, })),
-			view: rd.parse(`<rd_map v='vm.${path}'>${xhtml}</rd_map>`, envf(change)),
-			...intf(change),
+			view: rd.parse(`<rd_map v='vm.${path}'>${xhtml}</rd_map>`, privatef(change)),
+			...publicf(change),
 		};
 	};
 
 	let login;
-	let view;
 
 	let componentLogin = component(
 		'login',
-		{ username: '', password: '', },
+		change => ({
+			init: () => change(vm => ({ username: '', password: '', })),
+			setToken: token => change(vm => ({ ...vm, token, })),
+		}),
 		`
 			<font face='Monospac821 BT, Monaco, Consolas'>
 				<form name='login'>
@@ -66,14 +72,14 @@ Promise.resolve({})
 				return { username: '', password: '', };
 			}),
 		}),
-		change => ({
-			setToken: token => change(vm => ({ ...vm, token, })),
-		}),
 	);
 
 	let componentNotification = component(
 		'notification',
-		{ message: '', },
+		change => ({
+			init: () => change(vm => ({ message: '', })),
+			setMessage: token => change(vm => ({ ...vm, message, })),
+		}),
 		`
 			<div style='
 				background: #DDDDDD;
@@ -87,20 +93,17 @@ Promise.resolve({})
 			</div>
 		`,
 		change => ({}),
-		change => ({
-			setMessage: token => change(vm => ({ ...vm, message, })),
-		}),
 	);
 
 	let componentOverlay = component(
 		'overlay',
-		{ count: 0, },
-		`<div class='{ vm.count !== 0 ? "overlay" : "" }'></div>`,
-		change => ({}),
 		change => ({
+			init: () => change(vm => ({ count: 0, })),
 			enable: token => change(vm => ({ ...vm, count: vm.count + 1, })),
 			disable: token => change(vm => ({ ...vm, count: vm.count - 1, })),
 		}),
+		`<div class='{ vm.count !== 0 ? "overlay" : "" }'></div>`,
+		change => ({}),
 	);
 
 	let fetchBase = { cache: 'no-cache', credentials: 'omit', redirect: 'follow', referrer: 'no-referrer', };
