--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -40,7 +40,7 @@ Promise.resolve({})
 			return ({ ...vm, [path]: f(vm_), });
 		});
 		return {
-			view: rd.parse(`<rd_map v='vm.${path}'>${xhtml}</rd_map>`, privatef(change)),
+			view: rd.parse(privatef(change), `<rd_map v='vm.${path}'>${xhtml}</rd_map>`),
 			...publicf(change),
 		};
 	};
@@ -56,7 +56,11 @@ Promise.resolve({})
 			view_(pvm_, vm_ = f(pvm_), cudf);
 		};
 
-		view_ = rd.parse(`
+		view_ = rd.parse({
+			setUsername: username => change(vm => ({ ...vm, username, })),
+			setPassword: password => change(vm => ({ ...vm, password, })),
+			handleLogin: () => login(vm).then(token => change(vm => ({ ...vm, username: '', password: '', token, }))),
+		}, `
 			<font face='Monospac821 BT, Monaco, Consolas'>
 				<form name='login'>
 					Username <input rd_on_input='env.setUsername(ev.target.value)' value='{ vm.username }' type='text' autofocus='autofocus' /><br />
@@ -65,11 +69,7 @@ Promise.resolve({})
 					token: { vm.token }
 				</form>
 			</font>
-		`, {
-			setUsername: username => change(vm => ({ ...vm, username, })),
-			setPassword: password => change(vm => ({ ...vm, password, })),
-			handleLogin: () => login(vm).then(token => change(vm => ({ ...vm, username: '', password: '', token, }))),
-		});
+		`);
 
 		change(vm_ => ({ username: '', password: '' }));
 		return { change, };
@@ -157,7 +157,11 @@ Promise.resolve({})
 		.finally(componentOverlay.disable);
 	};
 
-	let view0 = rd.parse(`
+	let view0 = rd.parse({
+		componentLogin,
+		componentNotification,
+		componentOverlay,
+	}, `
 		<span style='font-family: sans-serif;'>
 			<rd_map v='true'>
 				<rd_component_isolated v='env.componentLogin' />
@@ -211,11 +215,7 @@ Promise.resolve({})
 			<button rd_on_click='messager(true)'>Message</button>
 			<button rd_on_click='closer()'>Close</button>
 		</span>
-	`, {
-		componentLogin,
-		componentNotification,
-		componentOverlay,
-	});
+	`);
 
 	let view1 = rd.span().children(
 		rd.map(vm => vm.message,
