--- a/src/main/html/webassembly.html
+++ b/src/main/html/webassembly.html
@@ -20,7 +20,7 @@ file:///home/ywsing/suite/src/main/html/webassembly.html
 'use strict';
 
 evalscript('render.js').then(({ rd, renderAgain, }) => {
-	let rd_vm = rd.parse(`
+	let rd_vm = rd.parse({}, `
 		<span>{ vm.result }</span>
 	`);
 
