--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -148,7 +148,7 @@ Promise.resolve({})
 		`<div class='{ vm.count !== 0 ? "overlay" : "" }'></div>`,
 	);
 
-	let loginOverlay = vm => {
+	let componentloginOverlay = vm => {
 		let co = componentOverlay(vm);
 		let cl = componentLogin(co.enable, co.disable)(vm);
 		return {
@@ -164,14 +164,12 @@ Promise.resolve({})
 	};
 
 	let view0 = rd.parse({
-		componentLogin,
+		componentloginOverlay,
 		componentNotification,
-		componentOverlay,
-		loginOverlay,
 	}, `
 		<span style='font-family: sans-serif;'>
 			<rd_map v='true'>
-				<rd_component v='env.loginOverlay' />
+				<rd_component v='env.componentloginOverlay' />
 			</rd_map>
 			<rd_view v='env.componentNotification.view' />
 
