--- a/src/main/html/react_dropdown.html
+++ b/src/main/html/react_dropdown.html
@@ -8,139 +8,118 @@
 		<link rel='stylesheet' type='text/css' href='//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.css' />
 
 		<style type='text/css'>
-#selected {
-  float: left;
-  margin-top: 20px;
-  width: 100%;
-}
-div.dropdown-container {
-  display: block;
-  float: left;
-  margin-top: 20px;
-  width: 250px;
-}
-div.dropdown-container > div.dropdown-display {
-  background: white;
-  border: solid 1px #dddddd;
-  box-sizing: border-box;
-  cursor: pointer;
-  float: left;
-  height: 40px;
-  width: 100%;
-  -moz-box-sizing: border-box;
-}
-div.dropdown-container > div.dropdown-display > * {
-  display: inline-block;
-  float: left;
-  height: 100%;
-  height: 40px;
-  line-height: 40px !important;
-  vertical-align: middle;
-}
-div.dropdown-container > div.dropdown-display > i {
-  font-size: 1.125em;
-  font-weight: bold;
-  margin-left: -24px;
-  padding-right: 10px;
-  position: relative;
-  text-align: right;
-  width: 14px;
-}
-div.dropdown-container > div.dropdown-display > span {
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  font-size: 14px;
-  padding-left: 10px;
-  padding-right: 34px;
-  position: relative;
-  width: 100%;
-}
-div.dropdown-container > div.dropdown-list {
-  float: left;
-  position: relative;
-  transform: scale(1, 0);
-  -moz-transform: scale(1, 0);
-  -ms-transform: scale(1, 0);
-  -o-transform: scale(1, 0);
-  -webkit-transform: scale(1, 0);
-  transition: -webkit-transform ease 250ms;
-  -moz-transition: -webkit-transform ease 250ms;
-  -ms-transition: -webkit-transform ease 250ms;
-  -o-transition: -webkit-transform ease 250ms;
-  -webkit-transition: -webkit-transform ease 250ms;
-  -moz-transition: transform ease 250ms;
-  -ms-transition: transform ease 250ms;
-  -o-transition: transform ease 250ms;
-  -webkit-transition: transform ease 250ms;
-  transition: transform ease 250ms;
-  width: 100%;
-}
-div.dropdown-container > div.dropdown-list > div {
-  background: white;
-  cursor: pointer;
-  position: absolute;
-  width: 100%;
-  z-index: 2;
-}
-div.dropdown-container > div.dropdown-list > div > div {
-  border: solid 1px #dddddd;
-  border-top: none;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  float: left;
-  font-size: 14px;
-  padding: 0 10px;
-  width: 100%;
-}
-div.dropdown-container > div.dropdown-list > div > div:hover {
-  background: #F0F0F0;
-}
-div.dropdown-container > div.dropdown-list > div > div.selected {
-  background: #2875c7;
-  color: white;
-}
-div.dropdown-container > div.dropdown-list > div > div > * {
-  display: inline-block;
-  height: 40px;
-  line-height: 40px !important;
-  vertical-align: middle;
-}
-div.dropdown-container > div.dropdown-list > div > div > i {
-  display: none;
-  float: left;
-  margin-left: -20px;
-  width: 20px;
-}
-div.dropdown-container > div.dropdown-list > div > div > span {
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  color: inherit;
-  float: left;
-  padding-right: 30px;
-  position: relative;
-  width: 100%;
-}
-div.dropdown-container > div.dropdown-list > div > div.selected > i {
-  display: inline-block;
-}
-div.dropdown-container.show > div.dropdown-list {
-  transform: scale(1, 1);
-  -moz-transform: scale(1, 1);
-  -ms-transform: scale(1, 1);
-  -o-transform: scale(1, 1);
-  -webkit-transform: scale(1, 1);
-}
-span.dropdown {
-  color: #888888;
-}
-span.dropdown > b {
-  color: black;
-}
+			#selected {
+			  float: left;
+			  margin-top: 20px;
+			  width: 100%;
+			}
+			div.dropdown-container {
+			  display: block;
+			  float: left;
+			  margin-top: 20px;
+			  width: 250px;
+			}
+			div.dropdown-container > div.dropdown-display {
+			  background: white;
+			  border: solid 1px #dddddd;
+			  box-sizing: border-box;
+			  cursor: pointer;
+			  float: left;
+			  height: 40px;
+			  width: 100%;
+			}
+			div.dropdown-container > div.dropdown-display > * {
+			  display: inline-block;
+			  float: left;
+			  height: 100%;
+			  height: 40px;
+			  line-height: 40px !important;
+			  vertical-align: middle;
+			}
+			div.dropdown-container > div.dropdown-display > i {
+			  font-size: 1.125em;
+			  font-weight: bold;
+			  margin-left: -24px;
+			  padding-right: 10px;
+			  position: relative;
+			  text-align: right;
+			  width: 14px;
+			}
+			div.dropdown-container > div.dropdown-display > span {
+			  box-sizing: border-box;
+			  font-size: 14px;
+			  padding-left: 10px;
+			  padding-right: 34px;
+			  position: relative;
+			  width: 100%;
+			}
+			div.dropdown-container > div.dropdown-list {
+			  float: left;
+			  position: relative;
+			  transform: scale(1, 0);
+			  transition: -webkit-transform ease 250ms;
+			  transition: transform ease 250ms;
+			  width: 100%;
+			}
+			div.dropdown-container > div.dropdown-list > div {
+			  background: white;
+			  cursor: pointer;
+			  position: absolute;
+			  width: 100%;
+			  z-index: 2;
+			}
+			div.dropdown-container > div.dropdown-list > div > div {
+			  border: solid 1px #dddddd;
+			  border-top: none;
+			  box-sizing: border-box;
+			  float: left;
+			  font-size: 14px;
+			  padding: 0 10px;
+			  width: 100%;
+			}
+			div.dropdown-container > div.dropdown-list > div > div:hover {
+			  background: #F0F0F0;
+			}
+			div.dropdown-container > div.dropdown-list > div > div.selected {
+			  background: #2875c7;
+			  color: white;
+			}
+			div.dropdown-container > div.dropdown-list > div > div > * {
+			  display: inline-block;
+			  height: 40px;
+			  line-height: 40px !important;
+			  vertical-align: middle;
+			}
+			div.dropdown-container > div.dropdown-list > div > div > i {
+			  display: none;
+			  float: left;
+			  margin-left: -20px;
+			  width: 20px;
+			}
+			div.dropdown-container > div.dropdown-list > div > div > span {
+			  box-sizing: border-box;
+			  color: inherit;
+			  float: left;
+			  padding-right: 30px;
+			  position: relative;
+			  width: 100%;
+			}
+			div.dropdown-container > div.dropdown-list > div > div.selected > i {
+			  display: inline-block;
+			}
+			div.dropdown-container.show > div.dropdown-list {
+			  transform: scale(1, 1);
+			}
+			span.dropdown {
+			  color: #888888;
+			}
+			span.dropdown > b {
+			  color: black;
+			}
 		</style>
 
 		<script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/react/16.13.1/umd/react.development.js'></script>
 		<script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/react-dom/16.13.1/umd/react-dom.development.js'></script>
-		<script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/less.js/1.7.5/less.min.js'></script>
 		<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
 		<script type='text/jsx'>
@@ -186,7 +165,10 @@ span.dropdown > b {
 			];
 
 			let selected_ = colors[0];
-			ReactDOM.render(<LtDropDown list={colors} getSelected={() => selected_} setSelected={item => selected_ = item} />, document.getElementById('container'));
+
+			ReactDOM.render(
+				<LtDropDown list={colors} getSelected={() => selected_} setSelected={item => selected_ = item} />,
+				document.getElementById('container'));
 		</script>
 	</head>
 
